--- a/src/app/basic/structure/structure.component.html
+++ b/src/app/basic/structure/structure.component.html
@@ -14,7 +14,7 @@
                 <div class="row clearfix">
                     
                     <!-- Content Column -->
-                    <div class="col-lg-7 md-mb-50 mt-10">
+                    <div class="col-lg-12 md-mb-50 mt-10">
                         <!-- Intro Info Tabs-->
                         <div class="intro-info-tabs">
 
@@ -38,8 +38,7 @@
                         </div>
                     </div>
 
-                    <!-- Video Column -->
-                    <div class="video-column col-lg-5">
+                    <!-- <div class="video-column col-lg-5">
                         <div class="inner-column">
                             <div class="course-features-info" style="margin: 10px;">
                                 <h5> SCHOOL SESSIONS</h5>
@@ -126,7 +125,7 @@
                                 
                             </div>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </section>
