--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -186,7 +186,8 @@
                                     Curricular Activity</a> </li>
                             <li><a class="dropdown-item" routerLink="/basic/structure" routerLinkActive="active">Fee
                                     Structure</a> </li>
-                            <li><a class="dropdown-item" routerLink="/basic/structure" routerLinkActive="active">School
+                            <li><a class="dropdown-item" routerLink="/more/academic-calendar"
+                                    routerLinkActive="active">School
                                     Sessions</a> </li>
                         </ul>
                     </li>
@@ -297,7 +298,8 @@
                                                 <li><a routerLink="/basic/structure" routerLinkActive="active">Fee
                                                         Structure</a>
                                                 </li>
-                                                <li><a routerLink="/basic/structure" routerLinkActive="active">School
+                                                <li><a routerLink="/more/academic-calendar"
+                                                        routerLinkActive="active">School
                                                         Sessions</a>
                                                 </li>
                                             </ul>
@@ -410,7 +412,7 @@
                                                     <li><a routerLink="/basic/structure" routerLinkActive="active">Fee
                                                             Structure</a>
                                                     </li>
-                                                    <li><a routerLink="/basic/structure"
+                                                    <li><a routerLink="/more/academic-calendar"
                                                             routerLinkActive="active">School Sessions</a>
                                                     </li>
                                                 </ul>
