--- a/src/app/more/academic-calendar/academic-calendar.component.html
+++ b/src/app/more/academic-calendar/academic-calendar.component.html
@@ -24,7 +24,7 @@
                                                     <div class="mb-2">
                                                         <h4 style="text-align: center !important;">{{c.title}}</h4>
                                                     </div>
-                                                    <img src="https://bapsanandmandir.co.in{{c.image}}" alt="">
+                                                    <img src="https://api.cesociety.in{{c.image}}" alt="">
                                                     <div class="mt-2">
                                                         <span [innerHTML]="c.details"></span>
                                                     </div>
