--- a/src/app/more/result/result.component.html
+++ b/src/app/more/result/result.component.html
@@ -83,7 +83,7 @@
                                                 <div class="accordion-body card-body">
                                                     <div class="row">
                                                         <div class="col-lg-12" style="text-align: center !important;">
-                                                            <img src="https://bapsanandmandir.co.in{{r.image}}" alt="result image"
+                                                            <img src="https://api.cesociety.in{{r.image}}" alt="result image"
                                                                 >
                                                         </div>
                                                     </div>
